--- a/assets/scripts/templates/book-listing.handlebars
+++ b/assets/scripts/templates/book-listing.handlebars
@@ -13,8 +13,7 @@
         No author provided.
       {{/if}}
     </p>
-    <!-- {{> partial}} -->
     <button data-id="{{book.id}}" class="btn btn-danger delete-book">Delete Book!</button>
   </section>
-
+  <!-- test comment -->
 {{/each}}
